Delete Charon V0 API (#156)